adding search capability

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ layout: post
         </div>
     </div>
     <br><br>
-    <span id="filter_status"></span>
+    <input type="text" id="search-box" name="fname">
+    <br><span id="filter_status"></span>
 
 <!-- 
 - name: "scallops, oyster mushrooms"
