--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: post
                 {% if item.recipe_urls and item.recipe_urls != empty %}[{% for url in item.recipe_urls %}<a href="{{ url }}">recipe</a>{% unless forloop.last %}, {% endunless %}{% endfor %}]{% endif %}
             </div>
             <div class="item-opinion">
-                {% if item.tags and item.tags != empty %}
+                {% if item.tags %}
                 {% assign curtagnames = item.tags %}
                 {% if item.count and item.count > popularcount %}
                     {% assign curtagnames = curtagnames | concat: populartag %}
